--- a/supervisor.conf
+++ b/supervisor.conf
@@ -11,7 +11,7 @@ stopasgroup=true
 #user=web
 
 [program:drinkbar_asgi_workers]
-command=/opt/drinkbar_project/env/bin/python /opt/drinkbar_project/drinkbar/manage.py runwor$
+command=/opt/drinkbar_project/env/bin/python /opt/drinkbar_project/drinkbar/manage.py runworker
 directory=/opt/drinkbar_project/drinkbar/
 stdout_logfile = /opt/drinkbar_project/drinkbar/logs/worker.log
 #user=web
@@ -22,3 +22,13 @@ stopasgroup=true
 
 
 
+
+[program:admin]
+command=/root/.virtualenvs/onedollar_backend/bin/python /webapps/onedollar_backend/manage.py runserver 0.0.0.0:8000
+directory=/webapps/onedollar_backend/
+stdout_logfile = /webapps/onedollar_backend/admin_runserver.log
+#user=web
+autostart=true
+autorestart=true
+redirect_stderr=true
+stopasgroup=true
